<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454C53"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/buttonLayout"
        android:layout_marginBottom="40dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:clickable="false"
            android:focusable="false"
            android:scrollHorizontally="false"
            android:singleLine="true"
            android:longClickable="false"
            android:cursorVisible="false"
            android:verticalScrollbarPosition="right"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:textAlignment="viewEnd"
            android:textSize="50sp"
            android:id="@+id/inputNumber">

        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#D6EEF9"
            android:ellipsize="end"
            android:textSize="25sp"
            android:focusable="false"
            android:clickable="false"
            android:background="@android:color/transparent"
            android:id="@+id/result"
            android:textAlignment="viewEnd"
            android:padding="10dp">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/buttonLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <android.widget.Button
                android:id="@+id/cButton"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/cButton"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_1Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_1Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_4Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_4Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">

            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_7Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_7Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_00Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_00Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <android.widget.Button
                android:id="@+id/ButtonPercent"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/ButtonPercent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_2Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_2Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_5Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_5Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">

            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_8Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_8Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_0Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_0Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <android.widget.Button
                android:id="@+id/clearButton"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic"
                android:drawableTop="@drawable/baseline_backspace_24"
                android:paddingTop="30sp">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_3Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_3Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_6Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_6Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">

            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_9Button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/_9Button"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_dotButton"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/Buttondot"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <android.widget.Button
                android:id="@+id/division"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/buttonDivision"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_ButtonMul"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/ButtonMul"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/ButtonSubtraction"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/buttonDiff"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">

            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_ButtonAdd"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/buttonAdd"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>
            <android.widget.Button
                android:id="@+id/_ButtonSol"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/ButtonSol"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic">
            </android.widget.Button>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>